# CRaudio

./: CMakeLists.txt  README.md
include/: craudio.h
lib/win64/: modplug.lib  ogg.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib
src/: CMakeLists.txt  craudio.c
